Add inference conf/iou controls, add PyMuPDF, and ignore local artifacts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "matplotlib>=3.10.8",
     "opencv-contrib-python>=4.13.0.92",
     "opencv-python>=4.13.0.92",
+    "pymupdf>=1.27.1",
     "scikit-image>=0.26.0",
     "scikit-learn>=1.8.0",
     "torch>=2.10.0",
